# chatbot-rag-streamlit

./: .gitignore  Dockerfile  README.md  app.py  build_index.py  index.py  main.py  preprocess_vision.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
documents/: vision_descriptions.json
notebooks/: extract_images.ipynb
prompts/: calculator.prompt.txt  rag_system.prompt.txt
tests/: conftest.py  test_utils.py
